# droneviz

./: .depcheckrc  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  LICENSE  README.md  app.vue  baseURL.config.ts  eslint.config.mjs  index.html  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  postcss.config.js  serviceworker.ts  tailwind.config.js  tsconfig.json  turbo.json  vite.config.mts  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yml
assets/: style.css  theme.ts
backend/: download.bash  firewallAllow.cmd  run.cmd  start.bat  stop.bat  versions.cfg
components/: CameraMoveHandler.ts  CameraWindow.vue  CesiumHighlighter.vue  CesiumMouseHandler.ts  CesiumViewer.vue  CesiumViewerWrapper.ts  ConfirmationButton.vue  CustomConfirmDialog.vue  DarkModeToggle.vue  DarkToggle.vue  DoubleClickHandler.ts  Drone.ts  DroneCollection.ts  DroneMenu.vue  DroneRightClickMenu.vue  DroneRightClickMenuActions.vue  DroneRightClickPin.vue  DroneTelemetry.vue  EgoPin.vue  EntityHandler.ts  GeolocationButton.vue  GeolocationPin.vue  LeftClickHandler.ts  MainToolbar.vue  MouseMoveHandler.ts  NetworkIndicator.vue  ProgressButton.vue  RightClickHandler.ts  Settings.ts  ToastService.ts  VideoAI.vue
core/: DarkMode.ts  Drone.ts  DroneCollection.ts  EgoPosition.ts  Geolocation.ts  MessageMap.ts  ego-position.ts
demo/: AircraftInSanFrancisco.ts  Demo.ts  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json  video.html
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+144 files in other folders)
