[package]
name = "droneviz"
version = "1.0.0"
description = "Droneviz - OceanSky Technologies"
authors = ["OceanSky Technologies"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = ["devtools"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-localhost = "2.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.3.1"
